force-app/main/default/objects/VCC_Training_Activity__c/fields/VCC_Assessment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Assessment_Completion_Date__c</fullName>
    <description>This is the date/time the SOT User completed the assessment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment Completion Date</label>
    <type>DateTime</type>
</CustomField>