force-app/main/default/objects/VCC_Training_Activity__c/fields/VCC_Assessment_ID__c.field-meta.xml
<CustomField>
    <fullName>VCC_Assessment_ID__c</fullName>
    <description>The ID of the Assessment assigned.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>