force-app/main/default/objects/VCC_Training_Activity__c/fields/VCC_Assigned_Class__c.field-meta.xml
<CustomField>
    <fullName>VCC_Assigned_Class__c</fullName>
    <description>This is the Live Session Date and Time for which the SOT User is registered.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Live Session Date and Time for which the SOT User is registered.</inlineHelpText>
    <label>Assigned Class</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>