force-app/main/default/objects/VCC_Training_Activity__c/fields/VCC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_End_Date__c</fullName>
    <description>The end of the training window.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the end of the training window.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>