force-app/main/default/objects/VCC_Training_Activity__c/fields/VCC_SOT_User__c.field-meta.xml
<CustomField>
    <fullName>VCC_SOT_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field to connect the Training Activity to the SOT User for whom the Training Activity is created.</description>
    <label>SOT User</label>
    <referenceTo>VCC_SOT_User__c</referenceTo>
    <relationshipLabel>Training Activities</relationshipLabel>
    <relationshipName>Training_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>