force-app/main/default/objects/VCC_Training_Activity__c/fields/VCC_Status__c.field-meta.xml
<CustomField>
    <fullName>VCC_Status__c</fullName>
    <description>A field to indicate the status of the Training Activity</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>