force-app/main/default/objects/VCC_Training_Activity__c/fields/VCC_Training_Attended__c.field-meta.xml
<CustomField>
    <fullName>VCC_Training_Attended__c</fullName>
    <description>A field to indicate if the Training was attended.</description>
    <label>Training Attended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>