force-app/main/default/objects/VCC_Training_Activity__c/fields/VCC_VISN_f__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN_f__c</fullName>
    <formula>VCC_SOT_User__r.VCC_Division_VISN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VISN</label>
    <type>Text</type>
</CustomField>