force-app/main/default/objects/VCC_Training_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VCC_SOT_User__c</columns>
    <columns>VCC_Status__c</columns>
    <columns>VCC_VISN_f__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>